refactor based on example

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,5 +1,8 @@
-<p>Edit content of <%= @file_name %></p>
+
 <form action='/<%= @file_name %>' method='post'>
-  <textarea style='clear' name='content' cols=60 rows= 20 /><%= @file_content %></textarea><br>
-  <button type='submit' value='Save Changes' />
+  <label for='content'>Edit content of <%= @file_name %>:</label>
+  <div>
+    <textarea id='content' name='content' cols=100 rows=20 /><%= @file_content %></textarea>
+  </div>
+  <button type='submit'>Save Changes</button>
 </form>
