--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,8 @@
 <ul>
   <% @files.each do |file| %>
-    <li><a href='/<%= file %>'><%= file %></a> <a href='/<%= file %>/edit'>Edit</a></li>
+    <li>
+      <a href='/<%= file %>'><%= file %></a>
+      <a href='/<%= file %>/edit'>Edit</a>
+    </li>
   <% end %>
 </ul>
