--- a/views/new.erb
+++ b/views/new.erb
@@ -1,5 +1,7 @@
-<p>Add a new document:</p>
-<form action='/' method='post'>
-  <input type='text' name='file_name' placeholder='File Name' value='' />
-  <button type='submit'>Create</button>
+<form action='create' method='post'>
+  <label for='file_name'>Add a new document:</label>
+  <div>
+    <input type='text' id='file_name' name='file_name' placeholder='File Name' />
+    <button type='submit'>Create</button>
+  </div>
 </form>
