added link to index, and delete action as get

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
     <li>
       <a href='/<%= file %>'><%= file %></a>
       <a href='/<%= file %>/edit'>Edit</a>
+      <a href='/<%= file %>/delete'>Delete</a>
     </li>
   <% end %>
 </ul>
