delete-file done, user handling started

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,13 @@
 <ul>
   <% @files.each do |file| %>
     <li>
-      <a href='/<%= file %>'><%= file %></a>
-      <a href='/<%= file %>/edit'>Edit</a>
-      <a href='/<%= file %>/delete'>Delete</a>
+      <span>
+        <a href='/<%= file %>'><%= file %></a>
+        <a href='/<%= file %>/edit'>Edit</a>
+        <form class='inline' action='/<%= file %>/delete' method='post'>
+          <button type='submit'>Delete</button>
+        </form>
+      </span>
     </li>
   <% end %>
 </ul>
