--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -8,6 +8,11 @@ body {
   background-color: #FFFF99;
 }
 
-form.inline {
+.inline {
   display:inline;
+}
+
+.user-status {
+  font-style: italic;
+  font-size: 0.9em;
 }
